# robodrummer

./: .gitignore  Cargo.toml  README.md  banner.typ  cassette.tape  generate_docs.sh  hyperpars.toml  justfile  out.csv  plot.py  plot_freq.py  robotbu.rs  run.sh  train.sh
.github/workflows/: rust.yml
data/: calibrate.csv  calibrate_14_05.csv  error.csv  network_test.csv  network_trained.csv  plot_sweep.py  plot_wave.py  selected_hypers.md  sweep-18-04-2024.csv  sweep-18-04-2024_12-52.csv  sweep-18-04-2024_12-57.csv  sweep-18-04-2024_13-07.csv  sweep.csv  test_waves.csv  width_1.csv  width_10.csv
data/hypers/: hypers_n120_a0.01_r0.8_l0.0001_count0.csv  hypers_n120_a0.01_r0.8_l0.0001_count1.csv  hypers_n120_a0.01_r0.8_l0.05_count0.csv  hypers_n120_a0.01_r0.8_l0.05_count1.csv  hypers_n120_a0.01_r0.8_l0.1_count0.csv  hypers_n120_a0.01_r0.8_l0.1_count1.csv  hypers_n120_a0.01_r0.95_l0.0001_count0.csv  hypers_n120_a0.01_r0.95_l0.0001_count1.csv  hypers_n120_a0.01_r0.95_l0.05_count0.csv  hypers_n120_a0.01_r0.95_l0.05_count1.csv  hypers_n120_a0.01_r0.95_l0.1_count0.csv  hypers_n120_a0.01_r0.95_l0.1_count1.csv  hypers_n120_a0.01_r1.1_l0.0001_count0.csv  hypers_n120_a0.01_r1.1_l0.0001_count1.csv  hypers_n120_a0.01_r1.1_l0.05_count0.csv  hypers_n120_a0.01_r1.1_l0.05_count1.csv  hypers_n120_a0.01_r1.1_l0.1_count0.csv  hypers_n120_a0.01_r1.1_l0.1_count1.csv  hypers_n120_a0.107_r0.8_l0.0001_count0.csv  hypers_n120_a0.107_r0.8_l0.0001_count1.csv  hypers_n120_a0.107_r0.8_l0.05_count0.csv  hypers_n120_a0.107_r0.8_l0.05_count1.csv  hypers_n120_a0.107_r0.8_l0.1_count0.csv  hypers_n120_a0.107_r0.8_l0.1_count1.csv  hypers_n120_a0.107_r0.95_l0.0001_count0.csv  hypers_n120_a0.107_r0.95_l0.0001_count1.csv  hypers_n120_a0.107_r0.95_l0.05_count0.csv  hypers_n120_a0.107_r0.95_l0.05_count1.csv  hypers_n120_a0.107_r0.95_l0.1_count0.csv  hypers_n120_a0.107_r0.95_l0.1_count1.csv  hypers_n120_a0.107_r1.1_l0.0001_count0.csv  hypers_n120_a0.107_r1.1_l0.0001_count1.csv  hypers_n120_a0.107_r1.1_l0.05_count0.csv  hypers_n120_a0.107_r1.1_l0.05_count1.csv  hypers_n120_a0.107_r1.1_l0.1_count0.csv  hypers_n120_a0.107_r1.1_l0.1_count1.csv  hypers_n120_a0.203_r0.8_l0.0001_count0.csv  hypers_n120_a0.203_r0.8_l0.0001_count1.csv  hypers_n120_a0.203_r0.8_l0.05_count0.csv  hypers_n120_a0.203_r0.8_l0.05_count1.csv  (+220 more)
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/neuroner/: all.html  index.html  macro.add_data!.html  macro.add_data.html  sidebar-items.js
docs/robodrummer/: all.html  index.html  macro.add_data.html  sidebar-items.js
src/: activation.rs  arpeggio.rs  constants.rs  data.rs  errors.rs  full_network.rs  guier.rs  hyper.rs  lib.rs  main.rs  messages.rs  midier.rs  midiutils.rs  network.rs  oscutil.rs  robot.rs  series.rs  test_robot.rs  trainutil.rs  utils.rs
src/commands/: combine.rs  completions.rs  dev.rs  gendata.rs  metronome.rs  midi_broker.rs  mod.rs  run.rs  test_robot.rs  train.rs  tui.rs
src/full_network/: data.rs  mod.rs
src/metronomer/: frequency.rs  gui.rs  inputwindow.rs  (+2 more)
(+366 files in other folders)
