[package]
name = "neuroner"
version = "0.1.0"
edition = "2021"
default-run = "train"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.9", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = "0.14.0"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
csv = "1.2.2"
rand = "0.8.5"
indicatif = "0.17"
midir = "0.9.1"
text_io = "0.1.12"
midi-control = "0.2.2"
