[package]
name = "neuroner"
version = "0.1.0"
edition = "2021"
authors = ["Miel Peeters"]
description = "A reservoir computing implementation for generating musical feeling."

[dependencies]
midier = { version = "0.1.0", path = "../midier" }
ndarray = { version = "0.15.6", features = ["blas", "serde"] }
blas-src = { version = "0.10", default-features = false, features = [
    "openblas",
] }
openblas-src = { version = "0.10", features = ["cblas"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
ndarray-rand = "0.14.0"
ndarray-npy = "0.8.1"
sprs = { version = "0.11.1", features = ["serde"] }
csv = "1.3.0"
rand = "0.8.5"
indicatif = "0.17"
midir = "0.9.1"
text_io = "0.1.12"
midi-control = "0.2.2"
make-csv = "0.1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
zmq = "0.10.0"
osc = { path = "/home/mielpeeters/coding/rust/osc/" }
guier = { path = "../guier" }
log = "0.4"
env_logger = "0.11.2"
toml = "0.8.10"
rand_distr = "0.4.3"
clap_complete = "4.5.1"
