[package]
name = "robodrummer"
version = "0.1.0"
edition = "2021"
authors = ["Miel Peeters"]
description = "Interactive drum machine using Reservoir Computing with Robotic Output"

[profile.release]
# TODO: re-enable me in the end
# lto = true
strip = true

[build-dependencies]
cc = "1.0.83"
hound = "3.5.1"

[dependencies]
ndarray = { version = "0.15.6", features = ["blas", "serde"] }
blas-src = { version = "0.10", default-features = false, features = [
    "openblas",
] }
openblas-src = { version = "0.10", features = ["cblas"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
ndarray-rand = "0.14.0"
ndarray-npy = "0.8.1"
sprs = { version = "0.11.1", features = ["serde"] }
csv = "1.3.0"
rand = "0.8.5"
indicatif = "0.17"
midir = "0.10.0"
text_io = "0.1.12"
midi-control = "0.2.2"
make-csv = "0.1.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0.1"
zmq = "0.10.0"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
rand_distr = "0.4.3"
clap_complete = "4.5"
nestify = "0.3.3"
cpal = { version = "0.15", features = ["jack"] }
crossterm = "0.27"
ratatui = "0.26"
derive_setters = "0.1.6"
tui-input = "0.8"
rustfft = "6.2"
rosc = "0.10.1"
